uefi-macros/tests/ui/fail/entry_bad_abi.stderr
error: Entry method must have no ABI modifier
 --> tests/ui/fail/entry_bad_abi.rs:8:1
  |
8 | extern "C" fn main(_handle: Handle, _st: SystemTable<Boot>) -> Status {
  | ^^^^^^
